fix navbar spacing styles mobile

--- a/public/output.css
+++ b/public/output.css
@@ -615,36 +615,12 @@ video {
   top: 2.5rem;
 }
 
-.top-\[4\.3rem\] {
-  top: 4.3rem;
-}
-
-.top-7 {
-  top: 1.75rem;
-}
-
-.top-16 {
-  top: 4rem;
-}
-
-.top-11 {
-  top: 2.75rem;
-}
-
-.top-6 {
-  top: 1.5rem;
-}
-
-.top-8 {
-  top: 2rem;
-}
-
-.top-9 {
-  top: 2.25rem;
-}
-
 .top-\[2\.1rem\] {
   top: 2.1rem;
+}
+
+.top-\[4\.3rem\] {
+  top: 4.3rem;
 }
 
 .ml-3 {
@@ -729,6 +705,78 @@ video {
 
 .mt-\[5\.7rem\] {
   margin-top: 5.7rem;
+}
+
+.mr-0 {
+  margin-right: 0px;
+}
+
+.ml-1 {
+  margin-left: 0.25rem;
+}
+
+.ml-\[\.3rem\] {
+  margin-left: .3rem;
+}
+
+.mr-\[\.3rem\] {
+  margin-right: .3rem;
+}
+
+.ml-\[\.4rem\] {
+  margin-left: .4rem;
+}
+
+.mr-\[\.4rem\] {
+  margin-right: .4rem;
+}
+
+.ml-\[\.35rem\] {
+  margin-left: .35rem;
+}
+
+.mr-\[\.35rem\] {
+  margin-right: .35rem;
+}
+
+.ml-\[\.32rem\] {
+  margin-left: .32rem;
+}
+
+.mr-\[\.32rem\] {
+  margin-right: .32rem;
+}
+
+.ml-\[\.25rem\] {
+  margin-left: .25rem;
+}
+
+.mr-\[\.25rem\] {
+  margin-right: .25rem;
+}
+
+.ml-\[\.2rem\] {
+  margin-left: .2rem;
+}
+
+.mr-\[\.2rem\] {
+  margin-right: .2rem;
+}
+
+.ml-2 {
+  margin-left: 0.5rem;
+}
+
+.ml-\[\.44rem\] {
+  margin-left: .44rem;
+}
+
+.mr-3 {
+  margin-right: 0.75rem;
+}
+
+.mr-1 {
+  margin-right: 0.25rem;
 }
 
 .flex {
@@ -840,6 +888,10 @@ video {
   border-top-width: 1px;
 }
 
+.border-l-2 {
+  border-left-width: 2px;
+}
+
 .border-solid {
   border-style: solid;
 }
@@ -883,10 +935,6 @@ video {
   background-color: rgb(76 95 213 / var(--tw-bg-opacity));
 }
 
-.bg-gray {
-  background-color: #FFFFFF70;
-}
-
 .px-12 {
   padding-left: 3rem;
   padding-right: 3rem;
@@ -917,6 +965,11 @@ video {
   padding-bottom: 1.25rem;
 }
 
+.py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+
 .pb-\[\.9rem\] {
   padding-bottom: .9rem;
 }
@@ -927,6 +980,14 @@ video {
 
 .pt-20 {
   padding-top: 5rem;
+}
+
+.pl-1 {
+  padding-left: 0.25rem;
+}
+
+.pl-2 {
+  padding-left: 0.5rem;
 }
 
 .text-center {
@@ -1045,31 +1106,25 @@ video {
     format("woff2");
 }
 
-@media (min-width: 768px) {
-  .md\:mt-2 {
-    margin-top: 0.5rem;
-  }
-}
-
 @media (min-width: 1024px) {
   .lg\:mb-\[3\.75rem\] {
     margin-bottom: 3.75rem;
+  }
+
+  .lg\:ml-32 {
+    margin-left: 8rem;
   }
 
   .lg\:ml-\[11\.5rem\] {
     margin-left: 11.5rem;
   }
 
-  .lg\:ml-\[6\.25rem\] {
-    margin-left: 6.25rem;
-  }
-
   .lg\:mr-1 {
     margin-right: 0.25rem;
   }
 
-  .lg\:mr-\[27\.45rem\] {
-    margin-right: 27.45rem;
+  .lg\:mr-\[26rem\] {
+    margin-right: 26rem;
   }
 
   .lg\:mt-0 {
@@ -1088,24 +1143,8 @@ video {
     margin-top: 12rem;
   }
 
-  .lg\:mt-\[\.15rem\] {
-    margin-top: .15rem;
-  }
-
-  .lg\:mt-\[\.2rem\] {
-    margin-top: .2rem;
-  }
-
   .lg\:mt-\[\.1rem\] {
     margin-top: .1rem;
-  }
-
-  .lg\:ml-32 {
-    margin-left: 8rem;
-  }
-
-  .lg\:mr-\[26rem\] {
-    margin-right: 26rem;
   }
 
   .lg\:flex {
